Fix overlapping subs on sync panel.
For: https://unisubs.sifterapp.com/projects/12298/issues/709470/comments

--- a/media/css/unisubs-widget.css
+++ b/media/css/unisubs-widget.css
@@ -2871,3 +2871,6 @@ textarea.copy-dialog {
 select.copy-dialog-select {
     margin: 12px;
 }
+.unisubs-modal-widget-sync ul.unisubs-titlesList span.unisubs-title {
+    padding-top: 20px !important;
+}
